--- a/index.html
+++ b/index.html
@@ -18,12 +18,34 @@
             <div class="col-4">
                 <p class="search">Search</p>
                 <div class="input">
-                    <input id="city" type="text" class="city" placeholder="City Name">
+                    <input id="city-search" type="text" class="city" placeholder="City Name">
                 </div>
             </div>
             <div class="col-8">
                 <div class="row">
-                    
+                    <div class="col-8">
+                        <p id="city-name" class="current-city"></p>
+                    </div>
+                </div>
+                <ul id="conditions">
+                    <li id="temp">Temp:</li>
+                    <li id="wind">Wind Speed:</li>
+                    <li id="humidity">Humidity:</li>
+                    <li id="uv-index">UV Index:</li>
+                </ul>
+            </div>
+            <div class="col-8">
+                <div class="row">
+                    <div class="col-12">
+                        <h3>5-Day Forecast</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card forecast"></div>
+                    <div class="card forecast"></div>
+                    <div class="card forecast"></div>
+                    <div class="card forecast"></div>
+                    <div class="card forecast"></div>
                 </div>
             </div>
         </div>
