--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="col-8">
                 <div class="row">
                     <div class="col-8">
-                        <p id="city-name" class="current-city"></p>
+                        <p id="current-city" class="current-city"></p>
                     </div>
                 </div>
                 <ul id="conditions">
@@ -50,5 +50,10 @@
             </div>
         </div>
     </div>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
