got api call working

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <p class="search">Search</p>
                 <div class="input">
                     <input id="city-search" type="text" class="city" placeholder="City Name">
+                    <div>
+                        <button id="search-button">Search</button>
+                    </div>
                 </div>
             </div>
             <div class="col-8">
@@ -40,12 +43,8 @@
                         <h3>5-Day Forecast</h3>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="card forecast"></div>
-                    <div class="card forecast"></div>
-                    <div class="card forecast"></div>
-                    <div class="card forecast"></div>
-                    <div class="card forecast"></div>
+                <div id="forecast" class="row">
+                    
                 </div>
             </div>
         </div>
@@ -54,6 +53,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment.min.js"></script>
 <script src="./assets/js/script.js"></script>
 </body>
 </html>
