five day forecast added

--- a/index.html
+++ b/index.html
@@ -36,15 +36,11 @@
                     <li id="humidity">Humidity:</li>
                     <li id="uv-index">UV Index:</li>
                 </ul>
-            </div>
-            <div class="col-8">
-                <div class="row">
-                    <div class="col-12">
+                <div class="col-8">
+                    <div class="row">
                         <h3>5-Day Forecast</h3>
                     </div>
-                </div>
-                <div id="forecast" class="row">
-                    
+                    <div id="forecast-container" class="flex"></div>
                 </div>
             </div>
         </div>
