--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     </div>
                     
                 </div>
-                <div class="col-8">
-                    <div class="row">
+                <div class="col-md-10">
+                    <div class="row m-5">
                         <h3>5-Day Forecast</h3>
                     </div>
-                    <div id="forecast-container" class="forecast-card"></div>
+                    <div id="forecast-container" class="row forecast-card"></div>
                 </div>
             </div>
         </div>
